tests/fixtures/invalid/min_str_dict.py
# Cannot call min() with Str, Dict[str, int]
x = min("hello", {"a": 1})
